Fixed searchpage not wrapping the entire div

--- a/client/src/pages/Searchpage/searchpage.css
+++ b/client/src/pages/Searchpage/searchpage.css
@@ -10,4 +10,5 @@
     flex-wrap: wrap;
     padding-left:75px;
     padding-right:75px;
+    margin-bottom: 100px;
 }
